samples/_failures_safe/1761213945_e279e9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_145e0535.c: In function ‘main’:
./samples/SAFE/__tmp_145e0535.c:144:28: error: missing terminating " character
  144 |                     printf("[%
      |                            ^~~
./samples/SAFE/__tmp_145e0535.c:144:21: error: expected expression at end of input
  144 |                     printf("[%
      |                     ^~~~~~
./samples/SAFE/__tmp_145e0535.c:144:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_145e0535.c:144:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_145e0535.c:144:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_145e0535.c:144:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_145e0535.c:144:21: error: expected declaration or statement at end of input
